--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,6 @@
 # These individuals contributed to the hbnb project in this repository 
 
+Ayodeji Adewuni <adewuniayodeji17@gmail.com>
+Roselene Odimgbe <babymesa98@gmail.com>
 Ezra Nobrega <ezra.nobrega@outlook.com>
 Justin Majetich <justinmajetich@gmail.com>
